[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autourgos-local-memory"
version = "1.0.1"
description = "Disk-backed memory for Autourgos agents — JSON file (LocalShortTermMemory) and SQLite (SQLiteMemory)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jitin Kumar Sengar", email = "devxjitin@gmail.com"}
]
keywords = ["autourgos", "agent", "memory", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["autourgos-memory>=1.0.1"]


[project.urls]
Homepage = "https://github.com/devxjitin/autourgos-local-memory"
Repository = "https://github.com/devxjitin/autourgos-local-memory"
Issues = "https://github.com/devxjitin/autourgos-local-memory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autourgos_local_memory*"]

[tool.setuptools.package-data]
autourgos_local_memory = ["py.typed"]
